--- a/index.html
+++ b/index.html
@@ -10,23 +10,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway::wght@700;800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="wraper">
-      <section class="header-section">
-        <div class="header-container">
           <header class="header">
-              <menu class="header-menu">
-                <div class="menu-container">
-                  <a class="header-logo" href="">Web<span class="studio">Studio</span></a>
-                  <a class="header-menu-icon" href="">
-                    <svg width="24" height="24" class="header-svg">
-                      <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
-                    </svg>
-                  </a>
-                </div>
-              </menu>
+             <div class="header-container container">
+                 <a class="header-logo" href="">Web<span class="studio">Studio</span></a>
+                 <a class="header-menu-icon" href="">
+                   <svg width="24" height="24" class="header-svg">
+                     <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+                   </svg>
+                 </a> 
+             </div>
           </header>
-        </div>
-      </section>
     <main>
       <section class="hero-section">
         <div class="hero-container">
