--- a/index.html
+++ b/index.html
@@ -10,21 +10,40 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway::wght@700;800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-          <header class="header">
-             <div class="header-container container">
-                 <a class="header-logo" href="">Web<span class="studio">Studio</span></a>
-                 <a class="header-menu-icon" href="">
-                   <svg width="24" height="24" class="header-svg">
-                     <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
-                   </svg>
-                 </a> 
-             </div>
-          </header>
+    <header class="header">
+       <div class="container">
+          <div class="header-container">
+            <a class="header-logo" href="">Web<span class="studio">Studio</span></a>
+            <div class="header-none-container">
+              <nav class="navigation">
+                <ul class="navigation-list">
+                     <li><a class="navigation-list-item underline" href="./index.html" target="_blank" rel="noopener noreferrer nofollow">Studio</a></li>
+                     <li><a class="navigation-list-item" href="" target="_blank" rel="noopener noreferrer nofollow">Portfolio</a></li>
+                     <li><a class="navigation-list-item" href="" target="_blank" rel="noopener noreferrer nofollow">Contacts</a></li>
+                </ul> 
+              </nav>
+              <address class="address">
+                <ul class="addsress-list">    
+                    <li><a class="addsress-list-item" href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer nofollow">info@devstudio.com</a></li>
+                    <li><a class="addsress-list-item" href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a></li>
+                </ul>
+              </address>
+            </div>
+            <a class="header-menu-icon" href="">
+              <svg width="24" height="24" class="header-svg">
+                 <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+              </svg>
+            </a> 
+          </div>
+        </div>
+    </header>
     <main>
       <section class="hero-section">
-        <div class="hero-container">
-          <h1 class="title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button">Order Service</button>
+        <div class="container hero-container">
+          <div class="hero-wrap">
+            <h1 class="title">Effective Solutions for Your Business</h1>
+            <button type="button" class="hero-button">Order Service</button>
+          </div>
         </div>
       </section>
     </main>
