--- a/index.html
+++ b/index.html
@@ -46,6 +46,48 @@
           </div>
         </div>
       </section>
+      <section class="qualities">
+        <div class="container qualities-wrap">
+          <ul class="qualities-list">
+            <li class="qualities-list-item">
+              <div class="qualities-svg-container">
+                <svg class="qualities-list-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
+              <h3 class="qualities-item-header">Strategy</h3>
+              <p class="qualities-item-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+            </li>
+            <li class="qualities-list-item">
+              <div class="qualities-svg-container">
+                <svg class="qualities-list-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
+              <h3 class="qualities-item-header">Punctuality</h3>
+              <p class="qualities-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li class="qualities-list-item">
+              <div class="qualities-svg-container">
+                <svg class="qualities-list-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
+              <h3 class="qualities-item-header">Diligence</h3>
+              <p class="qualities-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li class="qualities-list-item">
+              <div class="qualities-svg-container">
+                <svg class="qualities-list-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
+              <h3 class="qualities-item-header">Technologies</h3>
+              <p class="qualities-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </div>
 </body>
