--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway::wght@700;800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- !Header -->
     <header class="header">
        <div class="container">
           <div class="header-container">
@@ -38,6 +39,7 @@
         </div>
     </header>
     <main>
+      <!-- !Hero -->
       <section class="hero-section">
         <div class="container hero-container">
           <div class="hero-wrap">
@@ -46,6 +48,7 @@
           </div>
         </div>
       </section>
+      <!-- !Qualities -->
       <section class="qualities">
         <div class="container qualities-wrap">
           <ul class="qualities-list">
@@ -88,6 +91,162 @@
           </ul>
         </div>
       </section>
+      <!-- !Team -->
+      <section class="team">
+        <div class="team-container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+              <li class="team-item">
+                <img class="team-list-image" src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
+                <div class="team-list-container">
+                  <h3 class="team-list-title">Mark Guerrero</h3>
+                  <p class="team-list-text">Product Designer</p>
+                  <ul class="team-iconlist">
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="team-item">
+                <img class="team-list-image" src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
+                <div class="team-list-container">
+                  <h3 class="team-list-title">Tom Ford</h3>
+                  <p class="team-list-text">Frontend Developer</p>
+                  <ul class="team-iconlist">
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="team-item">
+                <img class="team-list-image" src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
+                <div class="team-list-container">
+                  <h3 class="team-list-title">Camila Garcia</h3>
+                  <p class="team-list-text">Marketing</p>
+                  <ul class="team-iconlist">
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="team-item">
+                <img class="team-list-image" src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
+                <div class="team-list-container">
+                  <h3 class="team-list-title">Daniel Wilson</h3>
+                  <p class="team-list-text">UI Designer</p>
+                  <ul class="team-iconlist">
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                    <li class="team-iconlist-item">
+                        <a class="team-iconlist-link" target="_blank" href="" rel="noopener noreffer nofollow">
+                          <svg class="team-list-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                          </svg>
+                        </a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+          </ul>
+        </div>
+    </section>
     </main>
   </div>
 </body>
