--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <!-- !Qualities -->
       <section class="qualities">
         <div class="container qualities-wrap">
+          <h2 class="visually-hidden">Qualities</h2>
           <ul class="qualities-list">
             <li class="qualities-list-item">
               <div class="qualities-svg-container">
@@ -93,7 +94,7 @@
       </section>
       <!-- !Team -->
       <section class="team">
-        <div class="team-container">
+        <div class="team-container container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
               <li class="team-item">
