--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
        <div class="container">
           <div class="header-container">
-            <a class="header-logo" href="">Web<span class="studio">Studio</span></a>
+            <a class="header-logo" href=""><span class="web">Web</span>Studio</a>
             <div class="header-none-container">
               <nav class="navigation">
                 <ul class="navigation-list">
@@ -365,13 +365,121 @@
             <div class="list-text-container">
               <p class="portfolio-list-title">Online Courses</p>
               <p class="portfolio-list-text">Marketing</p>
-            </div>
-            
+            </div>           
           </li>
         </ul>
       </div>
     </section>
     </main>
+    <footer class="footer">
+      <div class="container footer-container">
+        <div class="text-media-container">
+          <div class="footer-text-container general-container">
+            <a href="" class="footer-logo">
+               <span class="web">Web</span>Studio
+            </a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+          </div>
+          <div class="social-media-container general-container">
+            <h3 class="social-media-header">Social media</h3>
+            <ul class="footer-list">
+              <li class="footer-list-item">
+                <svg width="24" height="24" class="footer-svg">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </li>
+              <li class="footer-list-item">
+                <svg width="24" height="24" class="footer-svg">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </li>
+              <li class="footer-list-item">
+                <svg width="24" height="24" class="footer-svg">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </li>
+              <li class="footer-list-item">
+                <svg width="24" height="24" class="footer-svg">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="form-container general-container">
+          <p class="form-header">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-label">
+              <input type="email" class="footer-input" name="email" placeholder="E-mail">
+            </label>
+            <button class="footer-button">
+              Subscribe
+              <svg width="24" height="20" class="footer-button-icon">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+      </div>
+    </footer>
+    <!--! Backdrop -->
+    <div class="backdrop is-open">
+      <div class="modal-icon">
+        <button class="backdrop-icon" type="button">
+            <svg width="8" height="8" class="backdrop-icon-svg">
+              <use href="./images/icons.svg#icon-cross"></use>
+            </svg>
+        </button>
+        <div class="form-and-title">
+          <p class="backdrop-header">Leave your contacts and we will call you back</p>
+          <form class="form">
+            <div class=" margin-for-input">
+              <label class="label" for="user-name">Name</label>
+              <div class="input-container">
+                <input class="input" name="user-name" id="user-name" type="text">
+                <svg class="icon-for-input" width="18" height="24">
+                  <use href="./images/icons.svg#icon-man"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="margin-for-input">
+              <label class="label" for="phone-number">Phone</label>
+              <div class="input-container">
+                <input class="input" name="phone-number" id="phone-number" type="tel">
+                <svg class="icon-for-input" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="margin-for-input">
+              <label class="label" for="email">Email</label>
+              <div class="input-container">
+                <input class="input" name="email" id="email" type="email">
+                <svg class="icon-for-input" width="18" height="24">
+                  <use href="./images/icons.svg#icon-letter"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="comment-container">
+              <label class="label" for="user-comment">Comment</label>
+              <textarea class="textarea" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+            </div>
+            <div class="checkbox-container">
+              <input id="user-privacy" type="checkbox" class="checkbox visually-hidden" name="user-privacy" value="true">
+                <label class="label label-checkbox" for="user-privacy">
+                  <span class="checkbox-span">
+                    <svg class="checkbox-icon" width="10" height="8">
+                      <use href="./images/icons.svg#icon-Vector-1"></use>
+                    </svg>
+                  </span>
+                  I accept the terms and conditions of the&nbsp;<a class="checkbox-link" href="">Privacy Policy</a>
+                </label>
+            </div>
+            <button class="backdrop-button" type="button">Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
