--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
       </div>
     </footer>
     <!--! Backdrop -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal-icon">
         <button class="backdrop-icon" type="button">
             <svg width="8" height="8" class="backdrop-icon-svg">
@@ -478,6 +478,48 @@
             <button class="backdrop-button" type="button">Send</button>
           </form>
         </div>
+      </div>
+    </div>
+    <div class="mob-menu">
+      <div class="mob-icon">
+        <button class="mob-menu-button"></button>
+        <ul class="menu-navigation-list">
+          <li class="navigation-list-item">
+            <p></p>
+          </li>
+          <li class="navigation-list-item">
+            <p></p>
+          </li>
+          <li class="navigation-list-item">
+            <p></p>
+          </li>
+        </ul>
+        <ul class="menu-address-list">
+          <2></2>
+          <li class="address-list-item"><a href=""></a></li>
+        </ul>
+        <ul class="menu-socmedia-list">
+          <li class="socmedia-list-item">
+            <svg class="socmedia-svg">
+              <use></use>
+            </svg>
+          </li>
+          <li class="socmedia-list-item">
+            <svg class="socmedia-svg">
+              <use></use>
+            </svg>
+          </li>
+          <li class="socmedia-list-item">
+            <svg class="socmedia-svg">
+              <use></use>
+            </svg>
+          </li>
+          <li class="socmedia-list-item">
+            <svg class="socmedia-svg">
+              <use></use>
+            </svg>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
