--- a/index.html
+++ b/index.html
@@ -37,6 +37,52 @@
             </a> 
           </div>
         </div>
+        <div class="mob-menu">
+          <div class="menu-top-container">
+            <button class="mob-menu-button"></button>
+            <nav>
+              <ul class="menu-navigation-list">
+                <li class="navigation-list-item">
+                  <a></a>
+                </li>
+                <li class="navigation-list-item">
+                  <a></a>
+                </li>
+                <li class="navigation-list-item">
+                  <a></a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="menu-bottom-container">
+            <ul class="menu-address-list">
+              <li class="address-list-item"><a href=""></a></li>
+              <li class="address-list-item"><a href=""></a></li>
+            </ul>
+            <ul class="menu-socmedia-list">
+              <li class="socmedia-list-item">
+                <svg class="socmedia-svg">
+                  <use></use>
+                </svg>
+              </li>
+              <li class="socmedia-list-item">
+                <svg class="socmedia-svg">
+                  <use></use>
+                </svg>
+              </li>
+              <li class="socmedia-list-item">
+                <svg class="socmedia-svg">
+                  <use></use>
+                </svg>
+              </li>
+              <li class="socmedia-list-item">
+                <svg class="socmedia-svg">
+                  <use></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
     </header>
     <main>
       <!-- !Hero -->
@@ -384,24 +430,32 @@
             <h3 class="social-media-header">Social media</h3>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <svg width="24" height="24" class="footer-svg">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
+                <a class="footer-socmedia-link">
+                  <svg width="24" height="24" class="footer-svg">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
               </li>
               <li class="footer-list-item">
-                <svg width="24" height="24" class="footer-svg">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
+                <a class="footer-socmedia-link">
+                  <svg width="24" height="24" class="footer-svg">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
               </li>
               <li class="footer-list-item">
-                <svg width="24" height="24" class="footer-svg">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
+                <a class="footer-socmedia-link">
+                  <svg width="24" height="24" class="footer-svg">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
               </li>
               <li class="footer-list-item">
-                <svg width="24" height="24" class="footer-svg">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
+                <a class="footer-socmedia-link">
+                  <svg width="24" height="24" class="footer-svg">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
@@ -472,54 +526,12 @@
                       <use href="./images/icons.svg#icon-Vector-1"></use>
                     </svg>
                   </span>
-                  I accept the terms and conditions of the&nbsp;<a class="checkbox-link" href="">Privacy Policy</a>
+                  <span class="checkbox-text">I accept the terms and conditions of the&nbsp;<a class="checkbox-link" href="">Privacy Policy</a></span>
                 </label>
             </div>
             <button class="backdrop-button" type="button">Send</button>
           </form>
         </div>
-      </div>
-    </div>
-    <div class="mob-menu">
-      <div class="mob-icon">
-        <button class="mob-menu-button"></button>
-        <ul class="menu-navigation-list">
-          <li class="navigation-list-item">
-            <p></p>
-          </li>
-          <li class="navigation-list-item">
-            <p></p>
-          </li>
-          <li class="navigation-list-item">
-            <p></p>
-          </li>
-        </ul>
-        <ul class="menu-address-list">
-          <2></2>
-          <li class="address-list-item"><a href=""></a></li>
-        </ul>
-        <ul class="menu-socmedia-list">
-          <li class="socmedia-list-item">
-            <svg class="socmedia-svg">
-              <use></use>
-            </svg>
-          </li>
-          <li class="socmedia-list-item">
-            <svg class="socmedia-svg">
-              <use></use>
-            </svg>
-          </li>
-          <li class="socmedia-list-item">
-            <svg class="socmedia-svg">
-              <use></use>
-            </svg>
-          </li>
-          <li class="socmedia-list-item">
-            <svg class="socmedia-svg">
-              <use></use>
-            </svg>
-          </li>
-        </ul>
       </div>
     </div>
   </div>
