--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
   <title>Document</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway::wght@700;800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- !Header -->
     <header class="header">
-       <div class="container">
-          <div class="header-container">
+       <div class="container header-container">
             <a class="header-logo" href=""><span class="web">Web</span>Studio</a>
-            <div class="header-none-container">
               <nav class="navigation">
                 <ul class="navigation-list">
                      <li><a class="navigation-list-item underline" href="./index.html" target="_blank" rel="noopener noreferrer nofollow">Studio</a></li>
@@ -29,13 +28,11 @@
                     <li><a class="addsress-list-item" href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a></li>
                 </ul>
               </address>
-            </div>
             <a class="header-menu-icon" href="">
               <svg width="24" height="24" class="header-svg">
                  <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
               </svg>
             </a> 
-          </div>
         </div>
         <!-- !Mob-menu -->
         <div class="mob-menu">
@@ -92,11 +89,9 @@
     <main>
       <!-- !Hero -->
       <section class="hero-section">
-        <div class="container hero-container">
-          <div class="hero-wrap">
+        <div class="container">
             <h1 class="title">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-button">Order Service</button>
-          </div>
         </div>
       </section>
       <!-- !Qualities -->
