--- a/index.html
+++ b/index.html
@@ -419,7 +419,6 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <div class="text-media-container">
           <div class="footer-text-container general-container">
             <a href="" class="footer-logo">
                <span class="web">Web</span>Studio
@@ -459,21 +458,20 @@
               </li>
             </ul>
           </div>
-        </div>
-        <div class="form-container general-container">
-          <p class="form-header">Subscribe</p>
-          <form class="footer-form">
-            <label class="footer-label">
-              <input type="email" class="footer-input" name="email" placeholder="E-mail">
-            </label>
-            <button type="button" class="footer-button">
-              Subscribe
-              <svg width="24" height="20" class="footer-button-icon">
-                <use href="./images/icons.svg#icon-telegram"></use>
-              </svg>
-            </button>
-          </form>
-        </div>
+          <div class="form-container">
+            <p class="form-header">Subscribe</p>
+            <form class="footer-form">
+              <label class="footer-label">
+                <input type="email" class="footer-input" name="email" placeholder="E-mail">
+              </label>
+              <button type="button" class="footer-button">
+                Subscribe
+                <svg width="24" height="20" class="footer-button-icon">
+                  <use href="./images/icons.svg#icon-telegram"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
       </div>
     </footer>
     <!--! Backdrop -->
